@@ -2,6 +2,9 @@ Version 1.5.13+svn:
  * Language and i18n:
    * updated translations: Polish
    * updated DejaVuSans to 2.29
+ * User interface:
+   * Fix an assertion failure when an unexpected mouse button was used
+     (bug #13126)
 
 Version 1.5.13:
  * Graphics:
